# HTTPServer

./: docker-compose.yml
crud/: test1.http
mysql/mysql_conf/: defalut_authentication.cnf
server/: dockerfile  main.py  pyproject.toml
server/app/: main.py
server/app/api/: deps.py  router.py
server/app/api/api_v1/: router.py
server/app/api/api_v1/endpoints/: auth.py
server/app/api/endpoints/: auth.py
server/app/api/router/: router.py
server/app/config/: config.py
server/app/domain/entities/: user.py
server/app/drivers/: security.py
server/app/drivers/rdb/: base.py
server/app/usecases/: user.py
